--- a/Views/Seller/Orders.cshtml
+++ b/Views/Seller/Orders.cshtml
@@ -2,7 +2,6 @@
     Layout = "~/Views/Shared/ViewSeller.cshtml";
     ViewBag.Title = "Orders";
 }
-
     <div class="sorting">
         <div class="parametr parametr-first">
             дата
@@ -58,7 +57,7 @@
             </div>
 
             <div class="">
-                <a href="@Url.Action( Url.Content("~/orderinfo"), new {IdOrder = order.id} )">
+                <a href="@Url.Action( Url.Content("~/orderinfo"), new {IdOrder = order.id} )"> подробнее </a>
             </div>
             
         </div>
