поверстал на славу

--- a/Views/Shared/ViewSeller.cshtml
+++ b/Views/Shared/ViewSeller.cshtml
@@ -27,7 +27,7 @@
             </a>
 
             <a href="/seller" class="seller-button">
-                ветрина
+                витрина
             </a>
 
             <a class="seller-button">
