--- a/Content/Seller.css
+++ b/Content/Seller.css
@@ -16,7 +16,7 @@
     border-left-style: solid;
     border-width: 2px;
     border-color: #1c4f32;
-    font-size: 200%;
+    font-size: 1.5em;
     margin: 0;
 }
 
@@ -35,7 +35,16 @@
 
 .wriper {
     background: #93b8a2;
-    padding: 2%;
+}
+
+.container-flex {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+
+.column-flex{
+    margin:5px;
 }
 
 .field {
@@ -50,8 +59,8 @@
 }
 
 .avatar {
-    height: 52%;
-    width: 22.5%;
+    height: 300px;
+    width: 250px;
 }
 
 .photo {
@@ -63,13 +72,11 @@
 .main-info {
     vertical-align: top;
     display: inline-block;
-    height: 54.5%;
     width: 50%;
 }
 
 .name {
     display: block;
-    height: 10%;
     align-content: center;
     font-size: 200%;
     text-align: center;
@@ -77,62 +84,51 @@
 
 .info {
     display: block;
-    height: 83%;
     margin-top: 1%;
+    min-height: 200px;
+    white-space: pre-wrap;
 }
 
 .reit {
     vertical-align: top;
     display: inline-block;
-    height: 54.5%;
-    width: 23%;
+    width: 20%;
 }
 
 .star {
     display: block;
-    height: 20%;
     align-content:center;
     align-items:center;
 }
 
 .star-count {
-    display: block;
-    height: 30%;
     text-align: center;
 }
 
-.star-point-true {
-    width: 2em;
-    height: 2em;
-    margin: 1em 1em;
-    background: #02C986;
+.stars-grid {
+    display: grid;
+    grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+    height:30px;
+}
+.star-point {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
     border-radius: 100% 0;
+    vertical-align: top;
 }
 
 .star-point-false {
-    display: inline-block;
-    width: 2em;
-    height: 2em;
-    vertical-align: top;
     background: #555;
-    border-radius: 100% 0;
-    margin: 0;
 }
 
 .star-point-true {
-    display: inline-block;
-    width: 2em;
-    height: 2em;
-    vertical-align: top;
     background: #02C986;
-    border-radius: 100% 0;
-    margin: 0;
 }
 
 
 .contact {
     display: block;
-    height: 75%;
     margin-top: 2%;
 }
 
@@ -141,4 +137,5 @@
     background: #378052;
     color: #fae278;
     text-align: initial;
+    min-width:1100px;
 }
