--- a/Content/Site.css
+++ b/Content/Site.css
@@ -45,6 +45,7 @@ a:any-link{
     height: 64px;
     display:flex;
     align-items:center;
+    justify-content:center;
     position:relative;
     width:80%;
     min-width: 760px;
@@ -56,6 +57,7 @@ a:any-link{
     vertical-align: top;
     min-width: 145px;
     margin-right: 10px;
+    padding-right:5px;
     text-decoration: none;
 }
 
@@ -66,8 +68,6 @@ a:any-link{
     font-size: 5em;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: #a37740;
-    width: 100%;
-    height: 100%;
 }
 
 
@@ -144,9 +144,8 @@ a:any-link{
 
 .wriper {
     width: 94%;
-    min-width: 760px;
-    max-width: 1850px;
-    min-height: 1000px;
+    min-width: 1100px;
+    max-width: 1350px;
     margin: 110px auto;
 }
 
