--- a/Views/Seller/Index.cshtml
+++ b/Views/Seller/Index.cshtml
@@ -5,11 +5,11 @@
 
 }
 
-<div class="field avatar">
+<div class="column-flex field avatar">
     <img class="photo" src="https://i.pinimg.com/236x/b4/32/42/b432428d9fc277024eb5918f19b8cf35.jpg" />
 </div>
 
-<div class="main-info">
+<div class="column-flex main-info">
     <div class="field name">
         @ViewBag.User.name
     </div>
@@ -18,22 +18,24 @@
     </div>
 </div>
 
-<div class="reit">
+<div class="column-flex reit">
     <div class="field star">
         <div class="star-count">
-            @ViewBag.User.reiting / 88
+            @ViewBag.User.reiting / 100
         </div>
-        @for (int i = 0; i < ((int) (10 * ViewBag.User.reiting / 88 ) ); i++)
-        {
-            <div class="star-point-true">
-            </div>
-        }
-        
-        @for (int i = 0; i < 10 - ((int) (10 * ViewBag.User.reiting / 88 ) ); i++)
-        {
-            <div class="star-point-false">
-            </div>
-        }
+        <div class="stars-grid">
+            @for (int i = 0; i < ((int)(10 * ViewBag.User.reiting / 88)); i++)
+            {
+                <div class="star-point star-point-true">
+                </div>
+            }
+
+            @for (int i = 0; i < 10 - ((int)(10 * ViewBag.User.reiting / 88)); i++)
+            {
+                <div class="star-point star-point-false">
+                </div>
+            }
+        </div>
     </div>
     <div class="field contact">
         <h5 align = "center" >Контакты</h5>
