--- a/Content/Seller.css
+++ b/Content/Seller.css
@@ -1,15 +1,12 @@
 ﻿.header {
     background: linear-gradient(90deg, #4f7a5d, #3b6b4e, #4f7a5d);
-
     box-shadow: 0 6px 10px rgba(0,0,0,0.5);
-
     border-style: solid;
     border-width: 2px;
     border-color: #1c4f32;
 }
 
 .seller-button {
-    display: inline-block;
     color: #fae278;
     align-content: center;
     padding: 2%;
@@ -17,13 +14,12 @@
     border-width: 2px;
     border-color: #1c4f32;
     font-size: 1.5em;
-    margin: 0;
 }
 
 
-.seller-button:hover {
-    color: #facb78 !important;
-}
+    .seller-button:hover {
+        color: #facb78 !important;
+    }
 
 
 .last-button {
@@ -34,6 +30,7 @@
 
 
 .wriper {
+    padding-top:5px;
     background: #93b8a2;
 }
 
@@ -43,8 +40,8 @@
     padding: 20px;
 }
 
-.column-flex{
-    margin:5px;
+.column-flex {
+    margin: 5px;
 }
 
 .field {
@@ -97,8 +94,8 @@
 
 .star {
     display: block;
-    align-content:center;
-    align-items:center;
+    align-content: center;
+    align-items: center;
 }
 
 .star-count {
@@ -108,8 +105,9 @@
 .stars-grid {
     display: grid;
     grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
-    height:30px;
+    height: 30px;
 }
+
 .star-point {
     display: inline-block;
     width: 100%;
@@ -137,5 +135,48 @@
     background: #378052;
     color: #fae278;
     text-align: initial;
-    min-width:1100px;
+    min-width: 1100px;
 }
+
+.table{
+    width:92%;
+    margin:auto;
+    padding:10px;
+}
+
+.row-table {
+    display: grid;
+    width: 100%;
+    text-align: center;
+    grid-template-columns: 15% 17% 13% 12% 21% 7% 15%;
+    margin-bottom: 5px;
+    background: #e8d573;
+    border-radius: 10px;
+    font-size: 120%;
+}
+.row-first {
+    background: #378052;
+    margin-bottom: 10px;
+    color: rgb(251,235,166);
+    font-size:140%;
+}
+table {
+    background: #e8d573;
+    border-collapse:collapse;
+    font-size:120%;
+    display:inline-block;
+    margin-right:20px;
+}
+    table tr td {
+        border: 2px solid #378052;
+        padding:5px;
+    }
+    .button-main{
+        display:block;
+        margin-bottom:10px;
+    }
+    .status-order{
+        font-size:120%;
+        text-align:center;
+        margin-bottom:20px;
+    }
