gitler the best seller

--- a/Views/Shared/ViewSeller.cshtml
+++ b/Views/Shared/ViewSeller.cshtml
@@ -38,7 +38,7 @@
                 заказы
             </a>
 
-            <a class="seller-button">
+            <a href="/seller/report" class="seller-button">
                 продажи
             </a>
 
