--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                 Корзина
             </a>
             
-            @Html.Action("Summary", "Cart")
+            @Html.Action("Summary", "Сart")
         </div>
     </div>
 
