Комод. Патефонная злая игла. Тифозно-иконная комната. Фуга. Где ты была? Когда ты была, Сестра милосердия (в скобках - подруга)?
Плохая писклявая плоская твердь -
Кровать, на которой всё разом зачато:
Волхвы и желания, голод и смерть,
Друзья и враги, сыновья и внучата.

И запах клопов - будто запах духов.
Бедовые платьица, примусы, слоники.
Басовый аккорд фисгармонных мехов.
Кресло в морщинах. Стихи и поклонники...

А год безымянный, безвременный век.
Война - не война, но тоскливо и вьюга.
И там за стеклом - молодой человек
И всё еще девочка (в скобках - подруга)

--- a/Views/Seller/Report.cshtml
+++ b/Views/Seller/Report.cshtml
@@ -4,59 +4,62 @@
     GoodReport MainReport = ViewBag.MainReport;
     List<GoodReport> AllReport = ViewBag.AllReport;
     Layout = "~/Views/Shared/ViewSeller.cshtml";
+
+    List<string> dropList = new List<string>();
+
+
+    for (DateTime start = Convert.ToDateTime(ViewBag.Seller.time); start < DateTime.Now; start = start.AddMonths(1))
+    {
+        dropList.Add(
+            start.Year + "/" + @String.Format("{0:d2}", start.Month) + "/01 - " +
+            start.AddMonths(1).Year + "/" + @String.Format("{0:d2}", start.AddMonths(1).Month) + "/01"
+        );
+    }
+    dropList.Reverse();
 }
-    <form>
-        <select action="/" method="post">
-            @for (DateTime start = Convert.ToDateTime(ViewBag.Seller.time); start < DateTime.Now; start = start.AddMonths(1))
-            {
-                <option>
-                    @start.Year/@start.Month/00 - @start.AddMonths(1).Year/@start.AddMonths(1).Month/00
-                </option>
-            }
-        </select>
-        <input type="radio" id="radioButton" value="mail">
-        <label for="contactChoice3">За все время</label>
-        <button type="submit">Сфорипировать отчёт</button>
-    </form> 
-   
+
+<form action="/seller/controlreport" method="post">
+    @Html.DropDownList("radius", new SelectList(dropList))
+    @Html.CheckBox("showAll", true)
+    <label for="contactChoice3">За все время</label>
+    <button type="submit">Сфорипировать отчёт</button>
+</form>
 
 
+<table>
+    <tr>
+        <td>Заказов вскего</td>
+        <td>@MainReport.orders </td>
+    </tr>
+
+    <tr>
+        <td>Товаров продано</td>
+        <td>@MainReport.sell </td>
+    </tr>
 
 
-    <table>
+    <tr>
+        <td>Стоймость проданного товара</td>
+        <td>@MainReport.money </td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td> товар </td>
+        <td> заказов</td>
+        <td> продано </td>
+        <td> стоймость </td>
+    </tr>
+    @foreach (GoodReport report in AllReport)
+    {
+
         <tr>
-            <td>Заказов вскего</td>
-            <td>@MainReport.orders </td>
+            <td> @report.good.title </td>
+            <td> @report.orders </td>
+            <td> @report.sell </td>
+            <td> @report.money </td>
         </tr>
-
-        <tr>
-            <td>Товаров продано</td>
-            <td>@MainReport.sell </td>
-        </tr>
-
-
-        <tr>
-            <td>Стоймость проданного товара</td>
-            <td>@MainReport.money </td>
-        </tr>
-    </table>
-
-    <table>
-        <tr>
-            <td> товар </td>
-            <td> заказов</td>
-            <td> продано </td>
-            <td> стоймость </td>
-        </tr>
-        @foreach (GoodReport report in AllReport)
-        {
-
-            <tr>
-                <td> @report.good.title </td>
-                <td> @report.orders </td>
-                <td> @report.sell </td>
-                <td> @report.money </td>
-            </tr>
-        }
-    </table>
+    }
+</table>
 
