--- a/Views/Seller/Property.cshtml
+++ b/Views/Seller/Property.cshtml
@@ -3,23 +3,30 @@
     ViewBag.Title = "Property";
     Layout = "~/Views/Shared/ViewSeller.cshtml";
 }
+    <form>
+        <table border="2" align="center">
+            <tr>
+                <td>ФИО</td>
+                <td> @Html.TextBox("name")</td>
+            </tr>
 
-    <table border="2" align="center">
-        <tr>
-            <td>ФИО</td><td></td>
-        </tr>
+            <tr>
+                <td>описание</td>
+                <td>@Html.TextArea("discrib", null, 5, 20, null)</td>
+            </tr>
 
-        <tr>
-            <td>описание</td><td></td>
-        </tr>
+            <tr>
+                <td>Фотогрфия</td>
+                <td> <input type="file" name="photo"> </td>
+            </tr>
 
-        <tr>
-            <td>Фотогрфия</td><td></td>
-        </tr>
-
-        <tr>
-            <td>телефон</td><td></td>
-        </tr>
-
-    </table>
-
+            <tr>
+                <td>телефон</td>
+                <td> @Html.TextBox("boopa")</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><button type="submit">Изменить настройки</button></td>
+            </tr>
+        </table>
+    </form>
