--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,21 +11,23 @@
     @{
         foreach (Category category in Model.Categories.ToList())
         {
-            <div id="dropdown-item" class="category">
-                <a class="category-link" href="@Url.Action("Index", "Catalog", new { categoryId = category.id })">@category.name</a>
-                @if (category.subCategories.Count != 0)
-                {
-                    <div id="submenu">
-                        @foreach (Category subCategory in category.subCategories)
-                        {
-                            <div class="category">
-                                <a class="category-link" href="@Url.Action("Index", "Catalog", new { categoryId = subCategory.id })">@subCategory.name</a>
-                            </div>
-                        }
-                    </div>
-                }
-
-            </div>
+            if (category.parent == null)
+           {
+                <div id="dropdown-item" class="category">
+                    <a class="category-link" href="@Url.Action("Index", "Catalog", new { categoryId = category.id })">@category.name</a>
+                    @if (category.subCategories.Count != 0)
+                    {
+                        <div id="submenu">
+                            @foreach (Category subCategory in category.subCategories)
+                            {
+                                <div class="category">
+                                    <a class="category-link" href="@Url.Action("Index", "Catalog", new { categoryId = subCategory.id })">@subCategory.name</a>
+                                </div>
+                            }
+                        </div>
+                    }
+                </div>
+            }
         }
     }
 
