--- a/Views/Seller/Index.cshtml
+++ b/Views/Seller/Index.cshtml
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <div class="column-flex reit">
+    <div class="reit">
         <div class="field star">
             <div class="star-count">
                 @ViewBag.User.reiting / 100
