--- a/Content/Site.css
+++ b/Content/Site.css
@@ -13,12 +13,42 @@
     src: url(../fonts/Vollkorn-Black.ttf);
 }
 
-
+html, body {
+    height: 100%;
+}
 body {
     background-color: #fedc9e;
-    margin: 0;
     font-family: montserrat;
-    min-width:800px;
+    min-width: 800px;
+    display: flex;
+    flex-flow: column;
+    min-height: 100%;
+}
+.wriper {
+    width: 94%;
+    min-width: 1100px;
+    max-width: 1350px;
+    margin: 110px auto;
+    flex:1 0 auto;
+}
+
+.footer {
+    background-color: #fcb15b;
+    height: 100px;
+    width: 100%;
+    box-shadow: 0 6px 10px rgba(0,0,0,0.5);
+    flex: 0 0 auto;
+}
+
+.glass-case {
+    background: rgb(128,86,55);
+    width: 87%;
+    margin:auto;
+    min-width: 1000px;
+    border-radius: 7px;
+    padding-top:10px;
+    padding-bottom: 40px;
+    margin: auto;
 }
 
 a {
@@ -140,33 +170,9 @@ a:any-link{
     width: 19%;
 }
 
-.wriper {
-    width: 94%;
-    min-width: 1100px;
-    max-width: 1350px;
-    margin: 110px auto;
-}
 
-.footer {
-    vertical-align: bottom;
-    display: inline-block;
-    background-color: #fcb15b;
-    height: 100px;
-    width: 100%;
-    box-shadow: 0 6px 10px rgba(0,0,0,0.5);
-   
-}
 
-.glass-case {
-    background: rgb(128,86,55);
-    width: 87%;
-    margin:auto;
-    min-width: 1000px;
-    border-radius: 7px;
-    padding-top:10px;
-    padding-bottom: 40px;
-    margin: auto;
-}
+
 
 .goods {
     height: 200px;
