Среди любовью слывшего сплетенья рук и бед ты от меня не слышала, любима или нет. Не спрашивай об истине. Пусть буду я в долгу - я не могу быть искренним, и лгать я не могу. Но не гляди тоскующе и верь своей звезде - хорошую такую же я не встречал нигде. Всё так,        но силы мало ведь, чтоб жить,         взахлёб любя, ну, а тебя обманывать - обманывать себя; и заменять в наивности вовек не научусь я чувства без взаимности взаимностью без чувств... Хочу я память вытеснить и думать о своём, но всё же тянет видеться и быть с тобой вдвоём. Когда всё это кончится?! Я мучаюсь опять - и брать любовь не хочется, и страшно потерять.

--- a/Views/Seller/Property.cshtml
+++ b/Views/Seller/Property.cshtml
@@ -3,8 +3,9 @@
     ViewBag.Title = "Property";
     Layout = "~/Views/Shared/ViewSeller.cshtml";
 }
-    <form>
-        <table border="2" align="center">
+    <form align="center">
+        <h3>Настройки личного кабинета</h3>
+        <table>
             <tr>
                 <td>ФИО</td>
                 <td> @Html.TextBox("name")</td>
@@ -22,11 +23,50 @@
 
             <tr>
                 <td>телефон</td>
-                <td> @Html.TextBox("boopa")</td>
+                <td> @Html.TextBox("phone")</td>
             </tr>
+
+            <tr>
+                <td>адрес</td>
+                <td>@Html.TextBox("adress")</td>
+            </tr>
+
+            <tr>
+                <td>Номер караты<br>для начисления средств</td>
+                <td>@Html.TextBox("adress")</td>
+            </tr>
+
             <tr>
                 <td></td>
                 <td><button type="submit">Изменить настройки</button></td>
             </tr>
         </table>
     </form>
+
+
+<form align="center">
+    <h3>Смена пароля</h3>
+    <table>
+        <tr>
+            <td>старый пароль</td>
+            <td>@Html.TextBox("oldPasswor")</td>
+        </tr>
+
+        <tr>
+            <td>новый пароль</td>
+            <td> @Html.TextBox("newPassword") </td>
+        </tr>
+
+        <tr>
+            <td>повторите новый пароль</td>
+            <td> @Html.TextBox("repidPassword")</td>
+        </tr>
+
+        <tr>
+            <td></td>
+            <td><button type="submit">Изменить паролль</button></td>
+        </tr>
+    </table>
+</form>
+
+
