--- a/Views/Shared/ViewSeller.cshtml
+++ b/Views/Shared/ViewSeller.cshtml
@@ -17,6 +17,7 @@
     @RenderSection("links", false)
 
     <title>@ViewBag.Title - My ASP.NET Application</title>
+
 </head>
 
 <body>
@@ -30,7 +31,7 @@
                 витрина
             </a>
 
-            <a class="seller-button">
+            <a href="/Seller/mygoods" class="seller-button">
                 товары
             </a>
 
