--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,8 +30,8 @@
             <a class="button-main bascet" href="/Cart/Index">
                 Корзина
             </a>
-            
-            @Html.Action("Summary", "Сart")
+
+            <!-- Html.Action("Summary", "Сart") -->
         </div>
     </div>
 
