--- a/Views/Auth/Index.cshtml
+++ b/Views/Auth/Index.cshtml
@@ -3,6 +3,9 @@
 @{
     ViewBag.Title = "Авторизация";
 }
+@section links{
+    <link rel="stylesheet" href="~/Content/Auth.css">
+}
 <div class="pazmiv"></div>
 <div class="authWindow">
     <form method="post">
@@ -35,7 +38,7 @@
                 </div>
             </div>
         </div>
-         <div class="secPassword">
+        <div class="secPassword">
             <div class="desc-auth">
                 <div class="editor-label">
                     @Html.LabelFor(model => model.secPassword)
@@ -46,8 +49,8 @@
                 </div>
             </div>
         </div>
-            <div class="submitDiv">
-                <button type="submit" class="submitBtn">Войти</button>
-            </div>
+        <div class="submitDiv">
+            <button type="submit" class="submitBtn">Войти</button>
+        </div>
     </form>
 </div>
