--- a/Content/Home.css
+++ b/Content/Home.css
@@ -1,5 +1,11 @@
-﻿body {
+﻿@font-face {
+    font-family: montserrat;
+    src: url(../fonts/Montserrat-MediumItalic.otf);
+}
+
+body {
     background-color: #fedc9e;
+    font-family:montserrat;
 }
 .wriper {
     display: flex;
@@ -100,6 +106,25 @@
 }
 
 /*CheckTrackOrder*/
+a, a:hover {
+    text-decoration: none;
+}
+.btn {
+    width: 170px;
+    padding: 3px;
+    background: #815635;
+    color: #fcde5b;
+    font-size: 1.2em;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px 0.5px #222 inset;
+    text-align: center;
+    transition: background .2s;
+}
+    .btn:hover {
+        background: #986742;
+        background-size:100%;
+    }
+
 .track-block {
     vertical-align: top;
     background-color: #ffeea3;
@@ -140,11 +165,15 @@
     border-color: rgb(247, 197, 110);
     border-width: 2px;
     border-style: solid;
-    margin-top:17px;
+    margin-top: 17px;
+    padding: 2px 0 2px 9px;
+    color: black;
+    font-size: 1.3em;
 }
 
-#loading{
-    position:absolute;
-    display:none;
-    height:15px;
+#loading {
+    position: absolute;
+    display: none;
+    height: 15px;
+    transition: .1s;
 }
