--- a/Views/Seller/MyGoods.cshtml
+++ b/Views/Seller/MyGoods.cshtml
@@ -5,6 +5,8 @@
     string[] Statuses = new string[3] {"Не опубликовано","Опубликовано","Удалено"};
 }
 
+    <a href="@Url.Content("~/seller/addgood")">добавить товар</a>    
+
     <div class="table">
         <div class="row-table row-first">
             <div class="">
