--- a/Views/Partial/OrderInfo.cshtml
+++ b/Views/Partial/OrderInfo.cshtml
@@ -2,7 +2,7 @@
 @{
     Layout = null;
 }
-<div class="title">@Model.good.title</div>
+<div class="title">Товар: @Model.good.title</div>
 <div class="count">Количество заказано: @Model.count</div>
 <div class="time">Время заказа: @Model.Time.ToString()</div>
 <div class="status">
