--- a/Content/Site.css
+++ b/Content/Site.css
@@ -21,6 +21,8 @@ textarea {
 
 html, body {
     height: 100%;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 body {
@@ -39,6 +41,22 @@ body {
     flex:1 0 auto;
 }
 
+.loading-container{
+    position:relative;
+    width:87%;
+    margin:auto;
+}
+
+#loading {
+    position:absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(251, 235, 166, 0.3);
+    z-index: 10000;
+}
+
 .footer {
     background-color: #fcb15b;
     height: 100px;
@@ -49,13 +67,10 @@ body {
 
 .glass-case {
     background: rgb(128,86,55);
-    width: 87%;
-    margin:auto;
     min-width: 1000px;
     border-radius: 7px;
     padding-top:10px;
     padding-bottom: 40px;
-    margin: auto;
 }
 
 a {
@@ -252,10 +267,9 @@ a:hover{
 }
 
 .sorting{
-    width:87%;
     background: rgb(128,86,55);
     border-radius: 10px;
-    margin:10px auto 10px auto;
+    margin:10px 0 10px 0;
     min-width:950px;
     text-align:center;
 }
